fixed alignment issues final

--- a/style/style.scss
+++ b/style/style.scss
@@ -52,6 +52,44 @@ section {
     text-align: center;
 }
 
+label {
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: .5em;
+}
+
+.contact-left {
+    h3 {
+        margin-bottom: 3em;
+    }
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: .8em;
+    margin-bottom: 1em;
+    border-radius: .4em;
+    border: 1px solid gray;
+    box-sizing: border-box;
+}
+
+//contact .send-message button
+.send-message-cta {
+    background-color: rgb(0, 124, 226);
+    color: white;
+    font-weight: bold;
+    font-size: 1.3em;
+    border: none;
+    margin-top: 2em;
+    margin-bottom: 5em;
+    border-radius: 5em;
+    display: inline-block;
+    padding: .8em 2em;
+    width: unset;
+    cursor: pointer;
+}
+
 .left-col h1 {
     color: black;
     font-size: 3em;
@@ -165,9 +203,63 @@ nav li a:hover {
     cursor: pointer;
 }
 
+@media only screen and (min-width:868px) {
+    .primary-cta {
+        margin-left: 1.6em;
+    }
+    .hero {
+        margin-top: 10em;
+        h1 {
+            text-align: left;
+        }
+        p {
+            text-align: left;
+        }
+        section {
+            padding: 8em 4em;
+        }
+    }
+    .hero .container {
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .mobile-menu,
+    .mobile-menu-exit {
+        display: none;
+    }
+    .navbar .container {
+        display: grid;
+        grid-template-columns: 180px auto;
+    }
+    .navbar nav {
+        display: flex;
+        justify-content: space-between;
+        background: none;
+        position: unset;
+        height: auto;
+        width: 100%;
+        padding: 0;
+        ul {
+            display: flex;
+        }
+        ul.primary-nav {
+            margin: 20;
+            justify-content: space-between;
+        }
+        ul.secondary-nav {
+            margin: 0;
+            margin-left: 10;
+        }
+    }
+}
+
 .history,
 .about,
-.contact {
+.contact-left {
     padding: 40px;
     h1 {
         margin-top: 0;
@@ -187,17 +279,6 @@ nav li a:hover {
         margin-left: 0;
         font-weight: normal;
     }
-}
-
-.gform_wrapper .gform_fields li {
-    padding: 0 !important;
-    display: inline-block;
-    vertical-align: top;
-    width: 50%;
-    list-style-type: none !important;
-    list-style: none !important;
-    padding-right: 16px !important;
-    margin-right: -4px;
 }
 
 @media screen and (max-width: 640px) {
